Finished Lab | Tree Lab

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TreeLab2_Student</name>
+	<name>ICOM 4035 - Lab 09.1</name>
 	<comment></comment>
 	<projects>
 	</projects>
